# astra

./: .gitignore  .mcp.json  ARCHITECTURE.md  README.md  install.sh  marketplace.json  pyproject.toml  settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/plans/: pure-snuggling-trinket-agent-a56e76f88fee5f56b.md
.cursor-plugin/: plugin.json
agents/: architect.md  coordinator.md  debugger.md  designer.md  implementer.md  planner.md  pm.md  reviewer.md
commands/: architect.md  compound.md  debt-audit.md  debug.md  design.md  forge.md  implement.md  init.md  plan.md  retrospective.md  review.md  setup.md  ship.md  spec.md  update.md  workflow-guide.md
docs/: cursor.md  openclaw-port-plan.md
hooks/: audit-log.sh  hooks.json  inject-context.sh
orchestrator/: __init__.py  __main__.py  config.py  hooks.py  mcp.py  memory.py  permissions.py  pipeline.py  scheduler.py  state.py
orchestrator/checks/: __init__.py  base.py  design_checks.py  phase_checks.py  plan_checks.py  spec_checks.py  tech_checks.py
orchestrator/stages/: architect.py  base.py  design.py  implement.py  plan.py  review.py  spec.py
orchestrator/tasks/: __init__.py  debt_audit.py  nightly_forge.py  pr_review.py
orchestrator/tools/: __init__.py  git_tools.py  slack_tools.py
rules/: api.md  frontend.md  tests.md
scripts/: install-cursor.sh
skills/debt-audit/: SKILL.md
skills/debugging-methodology/: SKILL.md
skills/design-system/: SKILL.md
skills/implementation-patterns/: SKILL.md
skills/plan-template/: SKILL.md
skills/pm-framework/: SKILL.md
(+6 files in other folders)
